--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -7,19 +7,72 @@ output:
 
 
 ## Loading and preprocessing the data
-
+unzip("activity.zip")
+library(lubridate)
+activity <- read.csv("activity.csv")
+activity$date <- ymd(activity$date)
 
 
 ## What is mean total number of steps taken per day?
 
+clean.values <- subset(activity[complete.cases(activity), ],)
+
+activity.patt  <- with(data = clean.values, tapply(X = steps, INDEX = date, FUN = sum))
+activity.patt  <- data.frame(date = names(activity.patt), tot.steps = activity.patt)
+hist(activity.patt$tot.steps, xlab = "Total Steps", 
+            main = "Histogram of total number \n of steps taken each day")
+mean(activity.patt$tot.steps)
+median(activity.patt$tot.steps)          
 
 
 ## What is the average daily activity pattern?
 
+avg.steps <- with(data = clean.values, tapply(X = steps, INDEX = interval, FUN = mean))
+avg.steps  <- data.frame(interval = names(avg.steps), avgsteps = avg.steps)
 
 
+
+library(ggplot2)
+g <- ggplot(data = avg.steps, mapping = aes(y = avgsteps,  x = interval, group = 1)) 
+g <- g + geom_point(inherit.aes = TRUE) 
+g <- g  + geom_line(mapping = aes(y = avgsteps,  x = interval))
+g
+
+with(avg.steps, plot(y = avgsteps,  x = interval, type = "l"))
+
+
+print(paste("5-minute interval that, on average across all the days in the dataset, contains the maximum number of steps :", print(names(which.max(avg.steps$avgsteps)))))
+
+
+  
+
+  
 ## Imputing missing values
-
+#1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs) 
+print(paste("Total number of null values :" , sum(is.na(activity$steps))))
+#2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+nulls <- activity[!complete.cases(activity),]
+for(i in 1:length(unique(nulls$date))){
+  activity[which(activity$date == unique(nulls$date)[i]),]$steps <- as.numeric(avg.steps$avgsteps)
+}
+#3. Create a new dataset that is equal to the original dataset but with the missing data filled in
+#We are creating a new variable "filled.activity" that will have average steps filled in place of NA
+filled.activity <- activity
+nulls <- filled.activity[!complete.cases(filled.activity),]
+for(i in 1:length(unique(nulls$date))){
+  filled.activity[which(filled.activity$date == unique(nulls$date)[i]),]$steps <- as.numeric(avg.steps$avgsteps)
+}
+#4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+
+
+
+
+
+
+
+
+
